--- a/index.html
+++ b/index.html
@@ -1,51 +1,53 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Your Site</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Books & Heart - Quotes from the Soul</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header class="bg-light py-3 border-bottom">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="logo fw-bold">Your Logo</div>
-      <nav>
-        <a class="me-3 text-decoration-none text-dark" href="#section1">Section 1</a>
-        <a class="text-decoration-none text-dark" href="#section2">Section 2</a>
-      </nav>
-    </div>
-  </header>
+    <header>
+        <h1>Books & Heart</h1>
+        <p class="subtitle">A personal corner sharing quotes from the books that touched my soul</p>
+    </header>
 
-  <section id="hero" class="bg-secondary text-white text-center py-5">
-    <div class="container">
-      <h1 class="display-4">Welcome to Your Site</h1>
-      <p class="lead">This is a hero section similar in layout to Time.ir.</p>
-    </div>
-  </section>
+    <section id="about">
+        <h2>About</h2>
+        <p>Welcome to my personal corner of the web — a space where I share quotes from the books that have touched my soul and shaped my thoughts. Each quote here carries a story, a feeling, or a spark of inspiration from my reading journey. I hope these words speak to you as they have to me.</p>
+    </section>
 
-  <section id="section1" class="py-5">
-    <div class="container">
-      <h2>Section 1</h2>
-      <p>Information or services can go here.</p>
-    </div>
-  </section>
+    <section id="quotes">
+        <h2>Quotes Gallery</h2>
+        
+        <article class="quote-card">
+            <blockquote>"My chief occupation, despite appearances, has always been love."</blockquote>
+            <p class="author">Albert Camus</p>
+            <p class="note">This quote reminds me that beneath all distractions, love is the core purpose in life.</p>
+        </article>
 
-  <section id="section2" class="py-5 bg-light">
-    <div class="container">
-      <h2>Section 2</h2>
-      <p>More content in this section.</p>
-    </div>
-  </section>
+        <article class="quote-card">
+            <blockquote>"I exist in two places, here and where you are."</blockquote>
+            <p class="author">Margaret Atwood</p>
+            <p class="note">A beautiful expression of presence and connection beyond physical distance.</p>
+        </article>
 
-  <footer class="bg-dark text-white text-center py-4">
-    <div class="container">
-      <p class="mb-0">Contact Information</p>
-    </div>
-  </footer>
+        <article class="quote-card">
+            <blockquote>"I guess the only time most people think about injustice is when it happens to them."</blockquote>
+            <p class="author">Charles Bukowski</p>
+            <p class="note">A raw reflection on empathy and awareness.</p>
+        </article>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <article class="quote-card">
+            <blockquote>"The only way to deal with an unfree world is to become so absolutely free that your very existence is an act of rebellion."</blockquote>
+            <p class="author">Albert Camus</p>
+            <p class="note">A powerful call to live authentically and defiantly.</p>
+        </article>
+    </section>
+
+    <footer>
+        <p>© 2025 Books & Heart | Made with ❤️ by Donya</p>
+    </footer>
 </body>
 </html>
